--- a/.theanorc
+++ b/.theanorc
@@ -1,36 +1,33 @@
 [global]
-#device = gpu
-device = cpu
 floatX = float32
+optimizer_including='cudnn'
+linker=cvm
+device=cuda
+exception_verbosity=high
 
-# use a local compile dir
-# base_compiledir='/tmp/visin/theanocompiledir'
+#config.profile=True
+#config.ignore_first_call=True
+#profile=True
 
-# Disable the garbage collector for intermediate results: faster but uses more memory
-# allow_gc = False
+[scan]
+allow_output_prealloc=True
+allow_fc=True
 
-#### DEBUGGING ####
-# Do not optimize to ease debugging
-#optimizer = None
+[cuda]
+root = /usr/local/cuda/bin
 
-# If not off, Theano will run each op at graph build time, using Constants, SharedVariables and the tag 'test_value' as inputs to the function. 
-# This helps the user track down problems in the graph before it gets optimized.
-# default: off
-# other values:
-# raise: Compute test values on the fly. Any variable for which a test value is required, but not provided by the user, is treated as an error. An exception is raised accordingly.
-# warn: Idem, but a warning is issued instead of an Exception.
-# ignore: Silently ignore the computation of intermediate test values, if a variable is missing a test value.
-#compute_test_value = off
+[blas]
+ldflags = -lopenblas
 
-print_test_value = True
-
-# Use full names
-# exception_verbosity = high
-
-
-# [traceback]
-# limit = -1
+[nvcc]
+flags=-D_FORCE_INLINES
+fastmath = True
 
 [lib]
-# Faster CUDA memory allocator
-# cnmem = 0.9
+cnmem = 1
+#cnmem = .985
+
+[dnn]
+enabled = True
+include_path=/opt/lisa/os_v5/cudnn_v6
+library_path=/opt/lisa/os_v5/cudnn_v6
