--- a/.gitconfig
+++ b/.gitconfig
@@ -1,29 +1,43 @@
-    [user]
-	name = Francesco Visin
-	email = fvisin@gmail.com
+# This is Git's per-user configuration file.
+[user]
+# Please adapt and uncomment the following lines:
+	name = Dendi Suhubdy
+	email = suhubdyd@iro.umontreal.ca
 
-    [alias]
-        lg1 = log --graph --author="fvisin" --abbrev-commit --decorate --date=relative --format=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset) %C(white)%s%C(reset) %C(dim white)- %an%C(reset)%C(bold yellow)%d%C(reset)' 
-        lg2 = log --graph --author="fvisin" --abbrev-commit --decorate --format=format:'%C(bold blue)%h%C(reset) - %C(bold cyan)%aD%C(reset) %C(bold green)(%ar)%C(reset)%C(bold yellow)%d%C(reset)%n''          %C(white)%s%C(reset) %C(dim white)- %an%C(reset)'
-        lg = !"git lg1"
-        co = checkout
-        st = status
-        rb = rebase
-	stash-rename = "!_() { rev=$(git rev-parse $1) && git stash drop $1 || exit 1 ; git diff-index --quiet HEAD; s=$?; [ $s != 0 ] && git stash save \"tmp stash from stash-rename\"; git stash apply $rev && shift && git stash save \"$@\" && [ $s != 0 ] && git stash pop stash@{1}; }; _"
-
-    #[diff]
-    #    tool = kdiff3
-    #[difftool "kdiff3"]
-    #   path = /usr/bin/kdiff3 \"$LOCAL\" \"$REMOTE\" 
-    #   keepBackup = false
-    #   trustExitCode = false
 [color]
+ 	branch = auto
+ 	diff = auto
+ 	interactive = auto
+	status = auto
 	ui = true
+
+[alias]
+	lg1 = log --graph --author="dendisuhubdy" --abbrev-commit --decorate --date=relative --format=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset) %C(white)%s%C(reset) %C(dim white)- %an%C(reset)%C(bold yellow)%d%C(reset)' 
+	lg2 = log --graph --author="dendisuhubdy" --abbrev-commit --decorate --format=format:'%C(bold blue)%h%C(reset) - %C(bold cyan)%aD%C(reset) %C(bold green)(%ar)%C(reset)%C(bold yellow)%d%C(reset)%n''          %C(white)%s%C(reset) %C(dim white)- %an%C(reset)'
+	lg = !"git lg1"
+	co = checkout
+	st = status
+	rb = rebase
+	stash-rename = "!_() { rev=$(git rev-parse $1) && git stash drop $1 || exit 1 ; git diff-index --quiet HEAD; s=$?; [ $s != 0 ] && git stash save \"tmp stash from stash-rename\"; git stash apply $rev && shift && git stash save \"$@\" && [ $s != 0 ] && git stash pop stash@{1}; }; _"
+	gtree = log --abbrev-commit --pretty=oneline --graph --all
+	tree = log --abbrev-commit --pretty=oneline --graph
+
+[diff]
+    tool = kdiff3
+[difftool "kdiff3"]
+   path = /usr/bin/kdiff3 \"$LOCAL\" \"$REMOTE\" 
+   keepBackup = false
+   trustExitCode = false
+
 [push]
-	default = simple
+	default = tracking
 [credential]
 	helper = cache --timeout=3600
+
 [mergetool "kdiff3NoAuto"]
 	cmd = kdiff3 --L1 \"$MERGED (Base)\" --L2 \"$MERGED (Local)\" --L3 \"$MERGED (Remote)\" -o \"$MERGED\" \"$BASE\" \"$LOCAL\" \"$REMOTE\"
 [merge]
 	tool = kdiff3
+
+[log]
+ decorate = full
